--- a/index2.html
+++ b/index2.html
@@ -18,45 +18,55 @@
         <h1>Corazón de melon </h1>
         <header>
             <div class="relative-space">
-                <div id="slide_in" class="carousel slide center w-100 z-1" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#slide_in" data-slide-to="0" class="active"></li>
-                      <li data-target="#slide_in" data-slide-to="1"></li>
-                      <li data-target="#slide_in" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class ="img-carousel" src="assets/images/IMG_2389.png" class="d-block w-100" alt="2585">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5 class="z-3 title">Panini</h5>
-                          <p class="msj">Comer saludable nunca había sido tan fácil y delicioso</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img class ="img-carousel" src="assets/images/IMG_2515.png"  class="d-block w-100" alt="smoothies">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5 class="z-3 title">Smoothies</h5>
-                          <p class="msj">Un desayuno completo acompañado de granola y coco rayado</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img class ="img-carousel" src="assets/images/IMG_2232.png" class="d-block w-100" alt="avocado toast">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5 class="z-3 title">J&Q Crown</h5>
-                          <p class="msj">El avocado toast siempre se acompaña con un mix de lechugas</p>
-                        </div>
-                      </div>
+              <div id="slide_in" class="carousel slide center w-100 z-1" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#slide_in" data-slide-to="0" class="active"></li>
+                  <li data-target="#slide_in" data-slide-to="1"></li>
+                  <li data-target="#slide_in" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <picture>
+                      <source class="w-100 img-carousel" media="(min-width:768px)" srcset="assets/images/sm/IMG_2389.png">
+                      <img class="w-100 img-carousel" src="assets/images/lg/IMG_2389.png" alt="panini" >
+                    </picture>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="z-3 title">Panini</h5>
+                      <p class="msj">Comer saludable nunca había sido tan fácil y delicioso</p>
                     </div>
-                    <a class="carousel-control-prev" href="#slide_in" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slide_in" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
+                  </div>
+                  <div class="carousel-item">
+                    <picture>
+                      <source class="w-100 img-carousel" media="(min-width:768px)" srcset="assets/images/sm/IMG_2515.png">
+                      <img class="w-100 img-carousel" src="assets/images/lg/IMG_2515.png" alt="smoothies" >
+                    </picture>
+        
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="z-3 title">Smoothies</h5>
+                      <p class="msj">Un desayuno completo acompañado de granola y coco rayado</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <picture>
+                      <source class="w-100 img-carousel" media="(min-width:768px)" srcset="assets/images/sm/IMG_2232.png">
+                      <img class="w-100 img-carousel" src="assets/images/lg/IMG_2232.png" alt="smoothies" >
+                    </picture>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="z-3 title">J&Q Crown</h5>
+                      <p class="msj">El avocado toast siempre se acompaña con un mix de lechugas</p>
+                    </div>
+                  </div>
                 </div>
-                <img class="w-25 bottom-20 z-2 logo" src="assets/menu_images/Menu_title.png" alt="LOGO CORAZON">
+                <a class="carousel-control-prev" href="#slide_in" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#slide_in" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+              <img class="w-25 bottom-20 z-2 logo" src="assets/menu_images/Menu_title.png" alt="LOGO CORAZON">
             </div>
         </header>
         <!-- MENU -->
